--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Note List</title>
+    <style>
+        body {
+            background-color: #c1f1e6;
+        }
+        label[for="title"] {
+            font-weight: bold;
+        }
+        label[for="content"] {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-<h1 th:text="'Notes count: ' + ${notes.size()}"></h1>
+    <div class="container mt-4">
+        <h1 class="mb-4" th:text="'Notes count: ' + ${notes.size()}"></h1>
 
-<form th:action="@{/note/list}" method="post">
-    <div>
-        <label for="title">Title:</label>
-        <input type="text" name="title" id="title" />
+        <form th:action="@{/note/list}" method="post">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title:</label>
+            <input type="text" name="title" id="title" class="form-control" />
+        </div>
+
+        <div class="mb-3">
+            <label for="content" class="form-label">Content:</label>
+            <textarea name="content" id="content" cols="30" rows="10" class="form-control"></textarea>
+        </div>
+
+        <div>
+            <button type="submit" class="btn btn-primary">Send</button>
     </div>
-
-    <div style="margin-top: 20px;">
-        <label for="content">Content:</label>
-        <textarea name="content" id="content" cols="30" rows="10"></textarea>
-    </div>
-
-    <div>
-        <button type="submit">Send</button>
-    </div>
-</form>
-
-<div th:each="note : ${notes}" style="margin-top: 30px;">
-    <div th:text="'id: ' + ${note.id}"></div>
-    <div th:text="'Title: ' + ${note.title}"></div>
-    <br>
-    <div th:text="'Content: ' + ${note.content}"></div>
-    <form th:action="@{/note/edit}" method="get">
-        <input type="hidden" name="id" th:value="${note.id}" />
-        <button type="submit">Edit</button>
     </form>
-    <form th:action="@{/note/delete}" method="post">
-        <input type="hidden" name="id" th:value="${note.id}" />
-        <button type="submit">Delete</button>
-    </form>
+
+    <div th:each="note : ${notes}" class="card mt-4">
+        <div class="card-body">
+            <h5 class="card-title" th:text="'id: ' + ${note.id}"></h5>
+            <h6 class="card-subtitle mb-2 text-muted" th:text="'Title: ' + ${note.title}"></h6>
+            <p class="card-text" th:text="'Content: ' + ${note.content}"></p>
+                <form th:action="@{/note/edit}" method="get">
+                    <input type="hidden" name="id" th:value="${note.id}" />
+                    <button type="submit" class="btn btn-warning">Edit</button>
+                </form>
+
+                <form th:action="@{/note/delete}" method="post" class="mt-2">
+                    <input type="hidden" name="id" th:value="${note.id}" />
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+        </div>
+    </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
